--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,12 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    // firebase
+    implementation 'com.google.firebase:firebase-firestore:24.0.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.2'
+    // to read Excel file
+    implementation 'org.apache.poi:poi:3.9'
+    implementation "org.apache.poi:poi-ooxml:3.9"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
