--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         tools:targetApi="31">
 
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC7a4MeyLwF3uzZBhJkopGN9maRhZceZYQ"/>
+            android:name="com.google.android.geo.API_KEY"/>
 
         <activity android:name=".LoginActivity"
             android:exported="true">
