--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC7a4MeyLwF3uzZBhJkopGN9maRhZceZYQ"/>
+            android:value="${GOOGLE_MAPS_API_KEY}"/>
 
         <activity android:name=".LoginActivity"
             android:exported="true">
