--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.2'
     // firebase storage
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     // to read Excel file
     implementation 'org.apache.poi:poi:3.9'
     implementation "org.apache.poi:poi-ooxml:3.9"
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
